--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
+    compile 'it.neokree:MaterialTabs:0.11'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
